--- a/feedback-iOS/DroiFeedback/DroiFeedbackDemo/DroiFeedbackDemo/Info.plist
+++ b/feedback-iOS/DroiFeedback/DroiFeedbackDemo/DroiFeedbackDemo/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>DROI_CHANNEL_NAME</key>
+	<string>DroiBaaS</string>
+	<key>DROI_APP_ID</key>
+	<string>sd8umbzhKF9_6GZMVRt5UXFZ9zsPiUaHlQCQrP0N</string>
+	<key>CFBundleDisplayName</key>
+	<string>卓易反馈</string>
+	<key>DROI_PLATFORM_ID</key>
+	<string>c4Z6veDfXUiM220-tZtDCN-g1l1IObNBCN-g1l1I</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
